kubernetes_deploy/production_live_0/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy_to_kubernetes script>"
  name: laa-cla-public
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: laa-cla-public-app
        env: production
        service_area: laa-get-access
        service_team: cla-fala
    spec:
      containers:
      - image: "<to be set by deploy_to_kubernetes>"
        name: app
        readinessProbe:
          httpGet:
            path: /ping.json
            port: 8000
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /ping.json
            port: 8000
          initialDelaySeconds: 10
          timeoutSeconds: 1
          periodSeconds: 10
        ports:
        - containerPort: 8000
          name: http
