kubernetes_deploy/production_live_0/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: laa-cla-public
  namespace: laa-cla-public-production
spec:
  tls:
  - hosts:
    - laa-cla-public-production.apps.cloud-platform-live-0.k8s.integration.dsd.io
  - hosts:
    - checklegalaid.service.gov.uk
    secretName: laa-cla-public-production-tls-certificate

  rules:
  - host: laa-cla-public-production.apps.cloud-platform-live-0.k8s.integration.dsd.io
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-cla-public
          servicePort: 80
  - host: checklegalaid.service.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: laa-cla-public
          servicePort: 80
